--- a/InplayBet.Web/Views/Follow/ShowFollowerUsers.cshtml
+++ b/InplayBet.Web/Views/Follow/ShowFollowerUsers.cshtml
@@ -5,7 +5,7 @@
 }
 <div class="popup-outer" style="width:auto;">
     <div class="popup-border" style="width:auto;">
-        <h2>Followers of @ViewBag.FollowBy</h2>
+        <h2>Followers of @ViewBag.FollowTo</h2>
         <ul class="challenger-popup">
             @foreach (UserModel user in Model)
             {
