--- a/InplayBet.Web/Views/Shared/_EnquiryMailNotifiaction.cshtml
+++ b/InplayBet.Web/Views/Shared/_EnquiryMailNotifiaction.cshtml
@@ -12,7 +12,11 @@
 <body style="margin:0; padding:0;">
     <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tr>
-            <td style="background:#010205; padding:10px; border:0;"><a href="#"><img src="http://79.170.44.202/inplay20.co.uk/Styles/images/logo.png" width="237" height="66" alt="" border="0" /></a></td>
+            <td style="background:#010205; padding:10px; border:0;">
+                <a href="#">
+                    <img src="http://www.inplay20.com/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
+                </a>
+            </td>
         </tr>
         <tr>
             <td>&nbsp;</td>
