--- a/InplayBet.Web/Views/Shared/_UserActivationMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_UserActivationMailNotification.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <td style="background: #010205; padding: 10px; border: 0;">
                 <a href="#">
-                    <img src="http://79.170.44.202/inplay20.co.uk/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
+                    <img src="http://www.inplay20.com/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
                 </a>
             </td>
         </tr>
