--- a/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_BetSubmissionMailNotification.cshtml
@@ -14,7 +14,7 @@
         <tr>
             <td style="background: #010205; padding: 10px;">
                 <a href="#">
-                    <img src="http://79.170.44.202/inplay20.co.uk/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
+                    <img src="http://www.inplay20.com/Styles/images/logo.png" width="237" height="66" alt="" border="0" />
                 </a>
             </td>
         </tr>
@@ -34,7 +34,7 @@
                     <tr>
                         <td style="width: 15%">
                             <a href="#">
-                                <img src="http://79.170.44.202/inplay20.co.uk/Images/Users/Default.jpg" width="165" height="170" alt="" border="0" />
+                                <img src="http://www.inplay20.com/Images/Users/Default.jpg" width="165" height="170" alt="" border="0" />
                             </a>
                         </td>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">
@@ -84,20 +84,20 @@
                     </tr>
                     <tr>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Amount Placed:</strong></td>
-                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetPlaced</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetPlaced.ToString("C", new CultureInfo(Model.User.CultureCode))</td>
                     </tr>
                     <tr>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Winning Total:</strong></td>
-                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.WiningTotal</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.WiningTotal.ToString("C", new CultureInfo(Model.User.CultureCode))</td>
                     </tr>
                     <tr>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Bet Submited On:</strong></td>
-                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.CreatedOn.ToString("d", new CultureInfo(Model.User.CultureCode))</td>
+                        <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.CreatedOn.ToString("dd/MM/yyyy hh:mm:ss tt", new CultureInfo(Model.User.CultureCode))</td>
                     </tr>
-                    <tr>
+                    @*<tr>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><strong>Status:</strong></td>
                         <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">@Model.Bet.BetStatus</td>
-                    </tr>
+                    </tr>*@
                 </table>
             </td>
         </tr>
