--- a/InplayBet.Web/Views/HowToPlay/Index.cshtml
+++ b/InplayBet.Web/Views/HowToPlay/Index.cshtml
@@ -18,7 +18,7 @@
             </p>
         </div>
         <div class="example-block example-blockright">
-            <h5>Bet 1</h5>
+            <h5>Bet 2</h5>
             <p>
                 <strong>Liverpool vs Everton</strong><br>
                 Everton next goal<br>
@@ -96,6 +96,11 @@ Should you complete the challenge, it is shown as a winning green bar.<br />
 Winning thenchallenge is not an easy feat. Have a go today and see if you can master the inplay bets.</p>
 </div>
         <div class="video"><img src='@Url.Content("~/Styles/images/betting-video.jpg")' alt=""></div>
-        @{Html.RenderPartial("_PromoBanner");}
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
