--- a/InplayBet.Web/Views/Ranking/Index.cshtml
+++ b/InplayBet.Web/Views/Ranking/Index.cshtml
@@ -22,6 +22,11 @@
             @Html.Partial("_UserRank", Model, new ViewDataDictionary { { "LastElement", 3 } })
             <div class="rank-pagger"></div>
         }
-        @{Html.RenderPartial("_PromoBanner");}
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
