--- a/InplayBet.Web/Views/Reporting/Index.cshtml
+++ b/InplayBet.Web/Views/Reporting/Index.cshtml
@@ -4,6 +4,11 @@
 <div class="main-container">
     <div class="container">
         <p>We operate a reporting system on our challenge platform. Every bet that is placed has a reporting button. Should any bet be found to have cheated, it will either be reported by our members, or picked up on by our moderators. If any member is found to have cheated, then the bet will be removed. If any cheats more than once, then their account is closed.</p>
-        @{Html.RenderPartial("_PromoBanner");}
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
