--- a/InplayBet.Web/Views/ContactUs/Index.cshtml
+++ b/InplayBet.Web/Views/ContactUs/Index.cshtml
@@ -40,6 +40,12 @@
         <div class="contact-img">
             <img src='@Url.Content("~/Styles/images/contact-icon.jpg")' alt="">
         </div>
-        @{Html.RenderPartial("_PromoBanner");}
+		<div style="clear:both;"></div>
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
