--- a/InplayBet.Web/Views/LatestBets/Index.cshtml
+++ b/InplayBet.Web/Views/LatestBets/Index.cshtml
@@ -9,7 +9,12 @@
     <div class="container">
         <div class="mp-block">
             @{Html.RenderPartial("_RecentBets", Model);}
-            @{Html.RenderPartial("_PromoBanner");}
+            <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
         </div>
     </div>
 </div>
