--- a/InplayBet.Web/Views/MemberSearch/Index.cshtml
+++ b/InplayBet.Web/Views/MemberSearch/Index.cshtml
@@ -54,6 +54,11 @@
                 <div class="rank-pagger"></div>
             }
         </div>
-        @{Html.RenderPartial("_PromoBanner");}
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
