--- a/InplayBet.Web/Views/HowToPlay/Index.cshtml
+++ b/InplayBet.Web/Views/HowToPlay/Index.cshtml
@@ -30,77 +30,84 @@
         <div class="clear"></div>
         <p>This then carries on until the bet reaches £1000 or loses. Our system keeps a track on each members winnings and losses. It also ranks each player, so we can really see who is the best at inplay betting.</p>
         <h3 class="sub-heading">Using a betting company</h3>
-        <p>To use our system and generate odds and winnings, you need to have a betting account with a bookmaker. We recommend this sing Bet365, as they have the best inplay odds and range of matches but you can also use other companies like William Hill, Paddy Power, Coral etc.</p>
+        <p>To use our system and generate odds and winnings, you need to have a betting account with a bookmaker. We recommend using Bet365, as they have the best inplay odds and range of matches but you can also use other companies like William Hill, Paddy Power, Coral etc.</p>
         <p>You will need to use our system simultaneously with your betting account. You open your betting software and look through the matches and inplay bets. Once you find your perfect bet, you record your bet data in your challenge page and wait to see if it's wins or loses. If it wins, then you repeat this.</p>
         <p>Whether you place real money on your bets is at your discretion. Our system can be used with, or without, placing real money.</p>
         <h3 class="sub-heading">Not wanting to complete the challenge</h3>
         <p>If you don't want to play our challenge then our system can be used another way. It allows you to follow other people trying the challenge. This can give you valuable inplay tips and our latest bets page shows all the current inplay bets in order. It provides a great tipping service for your own inplay bets.</p>
-        <p>Once you are following a certain member, our system will track their bets for you email you once they place their latest bet. This then allows you to keep up to date on their latest inplay bets.</p>
-		<div class="step-box">
-	<h2>Step 1</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step1.jpg")' alt="" /></div>
-    <p>The challenge beings on the first bet, After creating your account, you will have access to the challenges. Only one challenge can be attempted at one time.</p>
-</div>
-<div class="step-box">
-	<h2>Step 2</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step2.jpg")' alt="" /></div>
-    <p>Then you need to sign up to an inplay account with any leading bookmaker. Our example shows Bet365</p>
-</div>
-<div class="step-box">
-	<h2>Step 3</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step3.jpg")' alt="" /></div>
-    <p>Then you need to look through the games and pick out the inplay game you want to bet on. In this example we have chosen Astra Giurgiu vs Rapid Beucharest.<br />
-
-The game is currently 1-0 to Astra and it is in the 51st munite. We have chose the inplay bet over 1.5 match goals and the odd are 4/9. </p>
-</div>
-<div class="step-box">
-	<h2>Step 4</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step4.jpg")' alt="" /></div>
-    <p>You then go back to our member profile and input the details into our bet 1 box. You then click on submit and sit back and wait for the bet to progress.
-The decision whether to stake real money on the bet is at your own discression and do not take  any responsibility for any losses.</p>
-</div>
-<div class="step-box">
-	<h2>Step 5</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step5.jpg")' alt="" /></div>
-    <p>The box will then change to win/loss option.<br />
-
-All the bet details are recordedand it now depends on the outcome of the bet.</p>
-</div>
-<div class="step-box">
-	<h2>Step 6</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step6.jpg")' alt="" /></div>
-    <p>In the 63rd minute, Astra score a second and the bet has won.</p>
-</div>
-<div class="step-box">
-	<h2>Step 7</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step7.jpg")' alt="" /></div>
-    <p>You can now click on the win button and bet 1 is recorded as a win.<br />
-
-It then opens up bet 2 and this amount placed is set at the winning amount of bet 1. This is then repeated bet by bet, until the £1000 barrier is broken.</p>
-</div>
-<div class="step-box">
-	<h2>Step 8</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step8.jpg")' alt="" /></div>
-    <p>The next bet details have been entered into the bet 2box.</p>
-</div>
-<div class="step-box">
-	<h2>Step 9</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step9.jpg")' alt="" /></div>
-    <p>After submitting bet 2, it takes you back to the win/loss screen. Unfortunately, this time the bet losses and the and the challenge is lost.</p>
-</div>
-<div class="step-box">
-	<h2>Step 10</h2>
-    <div class="img"><img src='@Url.Content("~/Styles/images/step10.jpg")' alt="" /></div>
-    <p>Once a challenge has been lost, it is recorded as a red challenge and shows the details of the bets.<br />
-Should you complete the challenge, it is shown as a winning green bar.<br />
-Winning thenchallenge is not an easy feat. Have a go today and see if you can master the inplay bets.</p>
-</div>
+        <p>Once you are following a certain member, our system will track their bets for you and then email you once they place their latest bet. This then allows you to keep up to date on their latest inplay bets.</p>
+        <div class="step-box">
+            <h2>Step 1</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step1.jpg")' alt="" /></div>
+            <p>The challenge beings on the first bet, After creating your account, you will have access to the challenges. Only one challenge can be attempted at one time.</p>
+        </div>
+        <div class="step-box">
+            <h2>Step 2</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step2.jpg")' alt="" /></div>
+            <p>Then you need to sign up to an inplay account with any leading bookmaker. Our example shows Bet365</p>
+        </div>
+        <div class="step-box">
+            <h2>Step 3</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step3.jpg")' alt="" /></div>
+            <p>
+                Then you need to look through the games and pick out the inplay game you want to bet on. In this example we have chosen Astra Giurgiu vs Rapid Beucharest.<br />
+                The game is currently 1-0 to Astra and it is in the 51st minute. We have chosen the inplay bet over 1.5 match goals and the odds are 4/9.
+            </p>
+        </div>
+        <div class="step-box">
+            <h2>Step 4</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step4.jpg")' alt="" /></div>
+            <p>
+                You then go back to our member profile and input the details into our bet 1 box. You then click on submit and sit back and wait for the bet to progress.
+                The decision whether to stake real money on the bet is at your own discression and do not take  any responsibility for any losses.
+            </p>
+        </div>
+        <div class="step-box">
+            <h2>Step 5</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step5.jpg")' alt="" /></div>
+            <p>
+                The box will then change to the win/loss option.<br />
+                All the bet details are recorded and it now depends on the outcome of the bet.
+            </p>
+        </div>
+        <div class="step-box">
+            <h2>Step 6</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step6.jpg")' alt="" /></div>
+            <p>In the 63rd minute, Astra score a second and the bet has won.</p>
+        </div>
+        <div class="step-box">
+            <h2>Step 7</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step7.jpg")' alt="" /></div>
+            <p>
+                You can now click on the win button and bet 1 is recorded as a win.<br />
+                It then opens up bet 2 and this amount placed is set at the winning amount of bet 1. This is then repeated bet by bet, until the £1000 barrier is broken.
+            </p>
+        </div>
+        <div class="step-box">
+            <h2>Step 8</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step8.jpg")' alt="" /></div>
+            <p>The next bet details have been entered into the bet 2 box.</p>
+        </div>
+        <div class="step-box">
+            <h2>Step 9</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step9.jpg")' alt="" /></div>
+            <p>After submitting bet 2, it takes you back to the win/loss screen. Unfortunately, this time the bet loses and the challenge is lost.</p>
+        </div>
+        <div class="step-box">
+            <h2>Step 10</h2>
+            <div class="img"><img src='@Url.Content("~/Styles/images/step10.jpg")' alt="" /></div>
+            <p>
+                Once a challenge has been lost, it is recorded as a red challenge and shows the details of the bets.<br />
+                Should you complete the challenge, it is shown as a winning green bar.<br />
+                Winning the challenge is not an easy feat. Have a go today and see if you can master the inplay bets.
+            </p>
+        </div>
         <div class="video"><img src='@Url.Content("~/Styles/images/betting-video.jpg")' alt=""></div>
         <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr1.jpg")' alt="" /></div>
-			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
-			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
-			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
-			<div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
-			<div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
+        <div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr2.jpg")' alt="" /></div>
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr3.jpg")' alt="" /></div>
+        <div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr4.jpg")' alt="" /></div>
+        <div class="sh-bnr-l"><img src='@Url.Content("~/Styles/images/sh-bnr5.jpg")' alt="" /></div>
+        <div class="sh-bnr-r"><img src='@Url.Content("~/Styles/images/sh-bnr6.jpg")' alt="" /></div>
     </div>
 </div>
