--- a/InplayBet.Web/Views/LatestBets/_RecentBets.cshtml
+++ b/InplayBet.Web/Views/LatestBets/_RecentBets.cshtml
@@ -20,7 +20,7 @@
             <strong>Odds :</strong> @bet.Odds<br />
             <strong>Amount Placed :</strong> @bet.BetPlaced.ToString("C", new CultureInfo(bet.Challenge.User.Currency.CultureCode))<br />
             <strong>Winning Total :</strong> @bet.WiningTotal.ToString("C", new CultureInfo(bet.Challenge.User.Currency.CultureCode))<br />
-            <strong>Bet Submited On :</strong> @bet.CreatedOn.ToString("dd/MM/yyyy hh:mm:ss tt", new CultureInfo(bet.Challenge.User.Currency.CultureCode))<br />
+            <strong>Bet Submitted On :</strong> @bet.CreatedOn.ToString("dd/MM/yyyy hh:mm:ss tt", new CultureInfo(bet.Challenge.User.Currency.CultureCode))<br />
             <strong>Status :</strong> @bet.BetStatus<br />
         </p>
     </div>
