--- a/InplayBet.Web/Views/MemberProfile/Index.cshtml
+++ b/InplayBet.Web/Views/MemberProfile/Index.cshtml
@@ -21,7 +21,7 @@
                     <h4><span>Name:</span> @Model.UserId</h4>
                     <p class="member">Member Since: @Model.MemberSince.ToString("d", (new CultureInfo(Model.CultureCode)))</p>
                     <p class="join">Ranking: @Model.Rank</p>
-                    <p class="bookmarker">Bookmarker - @Model.BookMakerName.ToString()</p>
+                    <p class="bookmarker">Bookmaker - @Model.BookMakerName.ToString()</p>
                     <p class="bookmarker">Consecutive Bet Wins: @ViewBag.ConsicutiveWonBets</p>
                     <div class="follow-block">
                         <p class="bookmarker">Followers:</p>
