--- a/InplayBet.Web/Views/Shared/_UserActivationMailNotification.cshtml
+++ b/InplayBet.Web/Views/Shared/_UserActivationMailNotification.cshtml
@@ -55,10 +55,10 @@
             <td>&nbsp;</td>
         </tr>
         <tr>
-            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">Thank you for joining <a href="#">www.inplay20.com</a>. Please click on the link below to verify your account.</td>
+            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;">Thank you for joining <a href="#">www.inplay20.com</a></td>
         </tr>
         <tr>
-            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><a href="@TempData["ActivationUrl"]">verify link goes here...</a></td>
+            <td style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: #000; padding: 5px;"><a href="@TempData["ActivationUrl"]">Please click this link to verify your account.</a></td>
         </tr>
         <tr>
             <td>&nbsp;</td>
