--- a/InplayBet.Web/Views/LatestWinners/_LatestChallengeWinner.cshtml
+++ b/InplayBet.Web/Views/LatestWinners/_LatestChallengeWinner.cshtml
@@ -14,7 +14,7 @@
         <h4><span>Name: </span>@Model.UserId</h4>
         <p class="member">Member Since: @Model.MemberSince.ToString("d", (new CultureInfo(Model.CultureCode)))</p>
         <p class="join">Ranking: @Model.Rank</p>
-        <p class="bookmarker">Bookmarker - @Model.BookMakerName</p>
+        <p class="bookmarker">Bookmaker - @Model.BookMakerName</p>
         <p class="bookmarker">Consecutive Bet Wins: @shared.GetConsicutiveWinByUser(Model.UserKey)</p>
         <div class="follow-block">
             <p class="bookmarker">Followers:</p>
