--- a/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
+++ b/InplayBet.Web/Views/Shared/_TopNavigation.cshtml
@@ -8,7 +8,7 @@
 <div class="nav-container">
     <div class="center">
         <ul class="nav">
-            <li id="lnkHome" class="active"><a href="@Url.Content("~/")Home">Home</a></li>
+            <li id="lnkHome" class="active"><a href="@Url.Content("~/")">Home</a></li>
             @if (!isAdminUser)
             {
                 <li id="lnkHowToPlay">@Html.ActionLink("How To Play", "Index", "HowToPlay", new { area = "" }, null)</li>
